--- a/style.css
+++ b/style.css
@@ -13,23 +13,48 @@ body {
     margin: 0;
 }
 
-.add-book {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 30px;
-    width: 800px;
-}
-
 .add-book-form {
     display: flex;
     flex-direction: row;
     gap: 30px;
 }
 
-.what {
-    padding: 10px;
-    margin: 10px;
-    background-color: aquamarine;
+.book-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.book-card {
+    background-color: blue;
+    height: 400px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+}
+
+.book-card-title {
+    background-color: red;
+    height: 100px;
+    width: 100px;
+}
+
+.book-card-author {
+    background-color: yellow;
+    height: 100px;
+    width: 100px;
+}
+
+.book-card-pages {
+    background-color: darkgreen;
+    height: 100px;
+    width: 100px;
+}
+
+.book-card-read {
+    background-color: white;
+    height: 100px;
+    width: 100px;
 }
