--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     padding: 0;
 }
 
+.blur {
+    filter: blur(5px);
+}
+
 .main-content {
     display: flex;
     flex-direction: column;
@@ -14,9 +18,16 @@ body {
 }
 
 .add-book-form {
-    display: flex;
-    flex-direction: row;
     gap: 30px;
+    display: none;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    border: 5px solid black;
+    z-index: 9999;
+    background-color: red;
+    filter: blur(0px);
 }
 
 .book-list {
@@ -57,4 +68,9 @@ body {
     background-color: white;
     height: 100px;
     width: 100px;
+    cursor: pointer;
+}
+
+button {
+    cursor: pointer;
 }
