--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 .blur {
@@ -17,17 +18,24 @@ body {
     margin: 0;
 }
 
-.add-book-form {
-    gap: 30px;
+.add-book-form-container {
     display: none;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    border: 5px solid black;
     z-index: 9999;
-    background-color: red;
     filter: blur(0px);
+}
+
+.add-book-form {
+    background-color: rgb(232, 240, 160);
+    border: 5px solid black;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .book-list {
