--- a/style.css
+++ b/style.css
@@ -1,11 +1,24 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     font-family: "Roboto", sans-serif;
+    background-color: wheat;
 }
 
 .blur {
     filter: blur(5px);
+}
+
+.header {
+    background-color: violet;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
 }
 
 .main-content {
@@ -16,6 +29,16 @@ body {
     flex: 0 0 auto;
     padding: 0;
     margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.add-book-div {
+    background-color: teal;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .add-book-form-container {
@@ -41,6 +64,8 @@ body {
 .book-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    height: 100%;
 }
 
 .book-card {
