--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .header {
-    background-color: violet;
+    background-color: wheat;
     width: 100%;
     height: 100%;
     display: flex;
@@ -34,7 +34,7 @@ body {
 }
 
 .add-book-div {
-    background-color: teal;
+    background-color: wheat;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -63,9 +63,22 @@ body {
 
 .book-list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 100%;
-    height: 100%;
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: 1fr;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+
+@media (min-width:641px) {
+    .book-list {
+        display: grid;
+        justify-content: center;
+        align-content: center;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 30px;
+        row-gap: 30px;
+    }
 }
 
 .book-card {
@@ -76,7 +89,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 5px;
+    margin: 20px;
+    padding: 20px;
 }
 
 .book-card-title {
@@ -106,4 +120,7 @@ body {
 
 button {
     cursor: pointer;
+    padding: 10px;
+    margin: 10px;
+    font-size: 24px;
 }
