--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: "Roboto", sans-serif;
-    background-color: wheat;
+    background-color: rgb(245, 230, 204);
 }
 
 .blur {
@@ -12,13 +12,16 @@ body {
 }
 
 .header {
-    background-color: wheat;
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 24px;
+    border-bottom: 1px solid gray;
+    background-color: rgb(204, 245, 230);
 }
 
 .main-content {
@@ -34,7 +37,6 @@ body {
 }
 
 .add-book-div {
-    background-color: wheat;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -43,10 +45,10 @@ body {
 
 .add-book-form-container {
     display: none;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    position: fixed;
     z-index: 9999;
     filter: blur(0px);
 }
@@ -54,11 +56,13 @@ body {
 .add-book-form {
     background-color: rgb(232, 240, 160);
     border: 5px solid black;
-    width: 300px;
+    width: 250px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 24px;
 }
 
 .book-list {
@@ -82,45 +86,85 @@ body {
 }
 
 .book-card {
-    background-color: blue;
+    background-color: rgb(204, 219, 245);
     height: 400px;
-    width: 400px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 20px;
     padding: 20px;
+    border: 3px solid black;
+    border-radius: 10%;
 }
 
 .book-card-title {
-    background-color: red;
-    height: 100px;
-    width: 100px;
+    background-color: rgb(245, 245, 245);
+    height: auto;
+    max-width: 300px;
+    overflow-wrap: anywhere;
+    border: 1px solid black;
+    margin: 5px;
+    padding: 10px;
+    font-size: 24px;
 }
 
 .book-card-author {
-    background-color: yellow;
-    height: 100px;
-    width: 100px;
+    background-color: rgb(245, 245, 245);
+    height: auto;
+    max-width: 300px;
+    overflow-wrap: anywhere;
+    border: 1px solid black;
+    margin: 5px;
+    padding: 10px;
+    font-size: 24px;
 }
 
 .book-card-pages {
-    background-color: darkgreen;
-    height: 100px;
-    width: 100px;
+    background-color: rgb(245, 245, 245);
+    height: auto;
+    max-width: 300px;
+    overflow-wrap: anywhere;
+    border: 1px solid black;
+    margin: 5px;
+    padding: 10px;
+    font-size: 24px;
 }
 
 .book-card-read {
-    background-color: white;
-    height: 100px;
-    width: 100px;
+    background-color: rgb(245, 245, 245);
+    height: auto;
+    max-width: 300px;
+    overflow-wrap: anywhere;
+    border: 1px solid black;
     cursor: pointer;
+    margin: 5px;
+    padding: 10px;
+    font-size: 24px;
 }
 
 button {
     cursor: pointer;
-    padding: 10px;
+    padding: 5px;
     margin: 10px;
-    font-size: 24px;
+    font-size: 1.3rem;
+}
+
+.green {
+    background-color: rgb(120, 231, 120);
+}
+
+.red {
+    background-color: rgb(243, 97, 72);
+}
+
+.small-text {
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+}
+
+.add-book-form-buttons-row {
+    display: flex;
 }
