--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,7 @@
+$body-color: rgb(245, 230, 204);
+$header-color: rgb(204, 245, 230);
+$footer-color: purple;
+
 * {
   margin: 0;
   padding: 0;
@@ -15,7 +19,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Roboto", sans-serif;
-  background-color: rgb(245, 230, 204);
+  background-color: $body-color;
 }
 
 .blur {
@@ -31,7 +35,7 @@ header {
   justify-content: center;
   font-size: 24px;
   border-bottom: 1px solid gray;
-  background-color: rgb(204, 245, 230);
+  background-color: $header-color;
 }
 
 main {
@@ -47,7 +51,7 @@ footer {
   justify-content: center;
   flex-shrink: 0;
   word-break: break-word;
-  background-color: yellow;
+  background-color: $footer-color;
   font-size: 2rem;
 }
 
