--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,12 @@
-$body-color: rgb(245, 230, 204);
-$header-color: rgb(204, 245, 230);
-$footer-color: purple;
+$body-bg-color: rgb(245, 230, 204);
+$header-bg-color: rgb(204, 245, 230);
+$footer-bg-color: purple;
+$red-color: rgb(243, 97, 72);
+$green-color: rgb(120, 231, 120);
 
 * {
   margin: 0;
   padding: 0;
-  font-family: monospace;
 }
 
 html {
@@ -14,28 +15,33 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  font-family: "Roboto", sans-serif;
-  background-color: $body-color;
+  font-family: sans-serif;
+  background-color: $body-bg-color;
 }
 
 .blur {
-  filter: blur(5px);
+  filter: blur(0.5rem);
 }
 
-header {
-  width: 100%;
-  margin: 0;
-  padding: 0;
+%flex-center {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
+}
+@mixin font-size($size) {
+  font-size: $size;
+  line-height: $size;
+}
+header {
+  @extend %flex-center;
+  width: 100%;
   border-bottom: 1px solid gray;
-  background-color: $header-color;
+  background-color: $header-bg-color;
+  h1 {
+    font-size: 3rem;
+    margin: 1rem;
+    padding: 1rem;
+  }
 }
 
 main {
@@ -45,19 +51,18 @@ main {
 }
 
 footer {
-  display: flex;
+  @extend %flex-center;
   width: 100%;
-  align-items: center;
-  justify-content: center;
   flex-shrink: 0;
   word-break: break-word;
-  background-color: $footer-color;
-  font-size: 2rem;
+  background-color: $footer-bg-color;
+  div {
+    font-size: 2rem;
+  }
 }
 
 footer > * {
   padding: 0.5rem;
-  font-family: "ShortStack";
 }
 
 .github-logo {
@@ -67,22 +72,16 @@ footer > * {
 }
 
 .main-wrapper {
-  display: flex;
+  @extend %flex-center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   flex: 0 0 auto;
-  padding: 0;
-  margin: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .add-book-div {
+  @extend %flex-center;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .add-book-form-container {
@@ -91,99 +90,46 @@ footer > * {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9999;
-  filter: blur(0px);
 }
 
 .add-book-form {
+  @extend %flex-center;
   background-color: rgb(232, 240, 160);
   border: 5px solid black;
-  width: 250px;
-  height: 350px;
-  display: flex;
+  width: 25rem;
+  height: 35rem;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: 24px;
 }
 
 .book-list {
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  grid-template-columns: 1fr;
-  column-gap: 30px;
-  row-gap: 30px;
-}
-
-@media (min-width: 641px) {
-  .book-list {
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 30px;
-    row-gap: 30px;
-  }
+  @extend %flex-center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .book-card {
+  @extend %flex-center;
   background-color: rgb(204, 219, 245);
-  height: 400px;
-  width: 300px;
-  display: flex;
+  height: 40rem;
+  width: 28rem;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 20px;
-  padding: 20px;
+  margin: 2rem;
+  padding: 2rem;
   border: 3px solid black;
   border-radius: 10%;
 }
 
-.book-card-title {
-  background-color: rgb(245, 245, 245);
-  height: auto;
-  max-width: 300px;
-  overflow-wrap: anywhere;
-  border: 1px solid black;
-  margin: 5px;
-  padding: 10px;
-  font-size: 24px;
-}
-
-.book-card-author {
-  background-color: rgb(245, 245, 245);
-  height: auto;
-  max-width: 300px;
-  overflow-wrap: anywhere;
-  border: 1px solid black;
-  margin: 5px;
-  padding: 10px;
-  font-size: 24px;
-}
-
-.book-card-pages {
-  background-color: rgb(245, 245, 245);
-  height: auto;
-  max-width: 300px;
-  overflow-wrap: anywhere;
-  border: 1px solid black;
-  margin: 5px;
-  padding: 10px;
-  font-size: 24px;
-}
-
 .book-card-read {
+  @include font-size(3rem);
   background-color: rgb(245, 245, 245);
   height: auto;
-  max-width: 300px;
+  max-width: 30rem;
   overflow-wrap: anywhere;
   border: 1px solid black;
   cursor: pointer;
-  margin: 5px;
-  padding: 10px;
-  font-size: 24px;
+  margin: 1rem;
+  padding: 1rem;
 }
 
 button {
@@ -194,30 +140,46 @@ button {
 }
 
 .green {
-  background-color: rgb(120, 231, 120);
+  background-color: $green-color;
 }
 
 .red {
-  background-color: rgb(243, 97, 72);
+  background-color: $red-color;
 }
 
 .small-text {
-  font-size: 12px;
-  margin: 0;
-  padding: 0;
-}
-
-.add-book-form-buttons-row {
-  display: flex;
+  @include font-size(12px);
 }
 
 label {
   text-align: center;
-  margin: 5px;
-  padding: 5px;
+  margin: 0.5rem;
+  padding: 0.5rem;
 }
 
 input[type="text"],
 input[type="number"] {
-  width: 200px;
+  width: 20rem;
+}
+
+%book-card-info {
+  width: 70%;
+  text-align: center;
+  background-color: rgb(245, 245, 245);
+  overflow-wrap: anywhere;
+  border: 1px solid black;
+  margin: 0.5rem;
+  padding: 1rem;
+  font-size: 1rem;
+  height: 2.4rem;
+  line-height: 1rem;
+}
+.book-card-title {
+  @extend %book-card-info;
+}
+.book-card-author {
+  @extend %book-card-info;
+}
+.book-card-pages {
+  @extend %book-card-info;
 }
