--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,8 @@
-$body-bg-color: rgb(245, 230, 204);
-$header-bg-color: rgb(204, 245, 230);
-$footer-bg-color: purple;
-$red-color: rgb(243, 97, 72);
-$green-color: rgb(120, 231, 120);
+$body-bg-color: #f2f2f2;
+$header-bg-color: #c40505;
+$footer-bg-color: #c40505;
+$red-color: #f36148;
+$green-color: #78e778;
 
 * {
   margin: 0;
@@ -20,7 +20,7 @@ body {
 }
 
 .blur {
-  filter: blur(0.5rem);
+  filter: blur(1rem);
 }
 
 %flex-center {
@@ -38,7 +38,7 @@ header {
   border-bottom: 1px solid gray;
   background-color: $header-bg-color;
   h1 {
-    font-size: 3rem;
+    font-size: 5rem;
     margin: 1rem;
     padding: 1rem;
   }
@@ -56,8 +56,9 @@ footer {
   flex-shrink: 0;
   word-break: break-word;
   background-color: $footer-bg-color;
+  margin-top: 2rem;
   div {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 }
 
@@ -82,6 +83,7 @@ footer > * {
 .add-book-div {
   @extend %flex-center;
   width: 100%;
+  margin: 2rem 0;
 }
 
 .add-book-form-container {
@@ -106,18 +108,18 @@ footer > * {
   @extend %flex-center;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 2rem;
 }
 
 .book-card {
   @extend %flex-center;
   background-color: rgb(204, 219, 245);
   height: 40rem;
-  width: 28rem;
+  width: 25rem;
   flex-direction: column;
-  margin: 2rem;
   padding: 2rem;
   border: 3px solid black;
-  border-radius: 10%;
+  border-radius: 2rem;
 }
 
 .book-card-read {
@@ -130,13 +132,53 @@ footer > * {
   cursor: pointer;
   margin: 1rem;
   padding: 1rem;
+  user-select: none;
+  border-radius: 0.5rem;
+  min-width: 50%;
+  text-align: center;
 }
 
 button {
+  align-items: center;
+  appearance: none;
+  background-color: #fcfcfd;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395a;
   cursor: pointer;
-  padding: 5px;
-  margin: 10px;
-  font-size: 1.3rem;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 3.5rem;
+  justify-content: center;
+  line-height: 2rem;
+  list-style: none;
+  overflow: hidden;
+  padding: 1rem;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 2rem;
+  &:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+      rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+    transform: translateY(-2px);
+  }
+  &:focus {
+    box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+      rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  }
+  &:active {
+    box-shadow: #d6d6e7 0 3px 7px inset;
+    transform: translateY(2px);
+  }
 }
 
 .green {
@@ -148,7 +190,7 @@ button {
 }
 
 .small-text {
-  @include font-size(12px);
+  @include font-size(1.5rem);
 }
 
 label {
@@ -163,16 +205,18 @@ input[type="number"] {
 }
 
 %book-card-info {
-  width: 70%;
+  @extend %flex-center;
   text-align: center;
+  width: 70%;
   background-color: rgb(245, 245, 245);
   overflow-wrap: anywhere;
   border: 1px solid black;
   margin: 0.5rem;
   padding: 1rem;
-  font-size: 1rem;
-  height: 2.4rem;
-  line-height: 1rem;
+  font-size: 2.4rem;
+  height: 5rem;
+  line-height: 2.4rem;
+  border-radius: 0.5rem;
 }
 .book-card-title {
   @extend %book-card-info;
@@ -182,4 +226,9 @@ input[type="number"] {
 }
 .book-card-pages {
   @extend %book-card-info;
+}
+
+.form-btn-wrapper {
+  @extend %flex-center;
+  gap: 2rem;
 }
