--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,67 @@
 $body-bg-color: #f2f2f2;
-$header-bg-color: #c40505;
-$footer-bg-color: #c40505;
+$header-bg-color: #15ddef;
+$footer-bg-color: #15ddef;
 $red-color: #f36148;
 $green-color: #78e778;
+
+@font-face {
+  font-family: "Nixie One";
+  src: url("./nixieone-regular-webfont.woff2") format("woff2"),
+    url("./nixieone-regular-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Mouse Memoirs";
+  src: url("./mousememoirs-regular-webfont.woff2") format("woff2"),
+    url("./mousememoirs-regular-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bitter";
+  src: url("./bitter-variablefont_wght-webfont.woff2") format("woff2"),
+    url("./bitter-variablefont_wght-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Cinzel";
+  src: url("./cinzel-variablefont_wght-webfont.woff2") format("woff2"),
+    url("./cinzel-variablefont_wght-webfont.woff") format("woff");
+}
+
+@mixin font-size($size) {
+  font-size: $size;
+  line-height: $size;
+}
+
+%book-card-info {
+  @extend %flex-center;
+  text-align: center;
+  font-family: "Bitter", monospace, sans-serif;
+  width: 70%;
+  background-color: rgb(245, 245, 245);
+  overflow-wrap: anywhere;
+  border: 1px solid black;
+  margin: 0.5rem;
+  padding: 1rem;
+  font-size: 2.4rem;
+  height: 8rem;
+  line-height: 2.4rem;
+  border-radius: 0.5rem;
+}
+
+%flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.blur {
+  filter: blur(1rem);
+}
+
+.hidden {
+  visibility: hidden;
+}
 
 * {
   margin: 0;
@@ -15,30 +74,25 @@ html {
 }
 
 body {
-  font-family: sans-serif;
   background-color: $body-bg-color;
 }
 
-.blur {
-  filter: blur(1rem);
+.main-wrapper {
+  @extend %flex-center;
+  flex-direction: column;
+  flex: 0 0 auto;
+  width: 100%;
+  min-height: 100vh;
 }
 
-%flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-@mixin font-size($size) {
-  font-size: $size;
-  line-height: $size;
-}
 header {
   @extend %flex-center;
   width: 100%;
   border-bottom: 1px solid gray;
   background-color: $header-bg-color;
   h1 {
-    font-size: 5rem;
+    font-family: "Nixie One", monospace, sans-serif;
+    font-size: 6rem;
     margin: 1rem;
     padding: 1rem;
   }
@@ -50,40 +104,73 @@ main {
   flex-direction: column;
 }
 
-footer {
-  @extend %flex-center;
-  width: 100%;
-  flex-shrink: 0;
-  word-break: break-word;
-  background-color: $footer-bg-color;
-  margin-top: 2rem;
-  div {
-    font-size: 1.6rem;
-  }
-}
-
-footer > * {
-  padding: 0.5rem;
-}
-
-.github-logo {
-  display: block;
-  width: 32px;
-  height: auto;
-}
-
-.main-wrapper {
-  @extend %flex-center;
-  flex-direction: column;
-  flex: 0 0 auto;
-  width: 100%;
-  min-height: 100vh;
-}
-
 .add-book-div {
   @extend %flex-center;
   width: 100%;
   margin: 2rem 0;
+}
+
+.book-list {
+  @extend %flex-center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.book-card {
+  @extend %flex-center;
+  background-color: rgb(204, 219, 245);
+  height: auto;
+  width: 25rem;
+  flex-direction: column;
+  padding: 2rem;
+  border: 3px solid black;
+  border-radius: 2rem;
+}
+
+.book-card-title {
+  @extend %book-card-info;
+}
+
+.book-card-author {
+  @extend %book-card-info;
+}
+
+.book-card-pages {
+  @extend %book-card-info;
+}
+
+.book-card-read {
+  @include font-size(3rem);
+  font-family: "Cinzel", monospace, sans-serif;
+  background-color: rgb(245, 245, 245);
+  height: auto;
+  max-width: 30rem;
+  overflow-wrap: anywhere;
+  border: 1px solid black;
+  cursor: pointer;
+  margin: 1rem;
+  padding: 1rem;
+  user-select: none;
+  border-radius: 0.5rem;
+  min-width: 50%;
+  text-align: center;
+  &.green {
+    background-color: $green-color;
+    &:hover {
+      background-color: darken($color: $green-color, $amount: 10%);
+    }
+  }
+  &.red {
+    background-color: $red-color;
+    &:hover {
+      background-color: darken($color: $red-color, $amount: 10%);
+    }
+  }
+}
+
+.small-text {
+  @include font-size(1.5rem);
 }
 
 .add-book-form-container {
@@ -97,46 +184,12 @@ footer > * {
 .add-book-form {
   @extend %flex-center;
   background-color: rgb(204, 219, 245);
-  height: 40rem;
-  width: 25rem;
-  flex-direction: column;
-  padding: 2rem;
-  border: 3px solid black;
-  border-radius: 2rem;
-}
-
-.book-list {
-  @extend %flex-center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 2rem;
-}
-
-.book-card {
-  @extend %flex-center;
-  background-color: rgb(204, 219, 245);
-  height: 40rem;
-  width: 25rem;
-  flex-direction: column;
-  padding: 2rem;
-  border: 3px solid black;
-  border-radius: 2rem;
-}
-
-.book-card-read {
-  @include font-size(3rem);
-  background-color: rgb(245, 245, 245);
   height: auto;
-  max-width: 30rem;
-  overflow-wrap: anywhere;
-  border: 1px solid black;
-  cursor: pointer;
-  margin: 1rem;
-  padding: 1rem;
-  user-select: none;
-  border-radius: 0.5rem;
-  min-width: 50%;
-  text-align: center;
+  width: 25rem;
+  flex-direction: column;
+  padding: 2rem;
+  border: 3px solid black;
+  border-radius: 2rem;
 }
 
 button {
@@ -148,14 +201,12 @@ button {
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
     rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
   box-sizing: border-box;
-  color: #36395a;
   cursor: pointer;
   display: inline-flex;
-  font-family: "JetBrains Mono", monospace;
-  height: 3.5rem;
+  height: 4rem;
   justify-content: center;
-  line-height: 2rem;
   list-style: none;
+  font-family: "Mouse Memoirs", monospace, sans-serif;
   overflow: hidden;
   padding: 1rem;
   position: relative;
@@ -166,7 +217,8 @@ button {
   touch-action: manipulation;
   white-space: nowrap;
   will-change: box-shadow, transform;
-  font-size: 2rem;
+  font-size: 3rem;
+  line-height: 3rem;
   &:hover {
     box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
       rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
@@ -182,28 +234,13 @@ button {
   }
 }
 
-.green {
-  background-color: $green-color;
-  &:hover {
-    background-color: darken($color: $green-color, $amount: 10%);
-  }
-}
-
-.red {
-  background-color: $red-color;
-  &:hover {
-    background-color: darken($color: $red-color, $amount: 10%);
-  }
-}
-
-.small-text {
-  @include font-size(1.5rem);
-}
-
 label {
   text-align: center;
   margin: 0.5rem;
   padding: 0.5rem;
+  p {
+    @include font-size(1.5rem);
+  }
 }
 
 .error-p {
@@ -211,41 +248,44 @@ label {
   color: red;
 }
 
-.hidden {
-  visibility: hidden;
-}
-
 input[type="text"],
 input[type="number"] {
   width: 20rem;
+  border: none;
+  border-radius: 0.5rem;
+  height: 5rem;
+  @include font-size(2.4rem);
+  box-sizing: border-box;
+  padding: 1rem;
+  margin: 0.75rem 0;
+  background-color: rgb(245, 245, 245);
+  font-family: "Bitter", monospace, sans-serif;
 }
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="checkbox"] {
+  display: inline-block;
+  margin: 0 1rem;
+}
+
 input.invalid-data {
+  border: 0.1rem solid;
   border-color: red;
   outline-color: red;
 }
 
-%book-card-info {
-  @extend %flex-center;
-  text-align: center;
-  width: 70%;
-  background-color: rgb(245, 245, 245);
-  overflow-wrap: anywhere;
-  border: 1px solid black;
-  margin: 0.5rem;
-  padding: 1rem;
-  font-size: 2.4rem;
-  height: 5rem;
-  line-height: 2.4rem;
-  border-radius: 0.5rem;
-}
-.book-card-title {
-  @extend %book-card-info;
-}
-.book-card-author {
-  @extend %book-card-info;
-}
-.book-card-pages {
-  @extend %book-card-info;
+.input-read-p {
+  @include font-size(2.4rem);
+  display: inline-block;
 }
 
 .form-btn-wrapper {
@@ -259,17 +299,26 @@ input.invalid-data {
   @include font-size(1.5rem);
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+footer {
+  @extend %flex-center;
+  width: 100%;
+  flex-shrink: 0;
+  word-break: break-word;
+  background-color: $footer-bg-color;
+  margin-top: 2rem;
+  border-top: 1px solid gray;
+  font-family: "Nixie One", monospace, sans-serif;
+  div {
+    font-size: 1.6rem;
+  }
 }
 
-input[type="number"] {
-  -moz-appearance: textfield;
+footer > * {
+  padding: 0.5rem;
 }
-label {
-  p {
-    @include font-size(1.5rem);
-  }
+
+.github-logo {
+  display: block;
+  width: 32px;
+  height: auto;
 }
